--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6CP-j1-BuX" userLabel="email">
-                                        <rect key="frame" x="150" y="326" width="300" height="30"/>
+                                        <rect key="frame" x="150" y="320" width="300" height="30"/>
                                         <color key="backgroundColor" red="0.99677062034606934" green="0.80863399095742761" blue="0.16895177518519222" alpha="0.49364224137931034" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="YbH-yl-In5"/>
@@ -55,7 +55,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZqT-nv-lFG" userLabel="password">
-                                        <rect key="frame" x="150" y="364" width="300" height="30"/>
+                                        <rect key="frame" x="150" y="358" width="300" height="30"/>
                                         <color key="backgroundColor" red="0.99677062029999997" green="0.808633991" blue="0.16895177519999999" alpha="0.49364224140000001" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="xuT-O4-wvK"/>
@@ -73,14 +73,14 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="a4p-6b-fJP">
-                                        <rect key="frame" x="236" y="161" width="128" height="128"/>
+                                        <rect key="frame" x="236" y="155" width="128" height="128"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="0wI-8h-ieo"/>
                                             <constraint firstAttribute="width" constant="128" id="VWd-8f-yd2"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cbT-pz-Wov">
-                                        <rect key="frame" x="150" y="402" width="300" height="36"/>
+                                        <rect key="frame" x="150" y="396" width="300" height="36"/>
                                         <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="wxI-Q4-Po4"/>
@@ -92,20 +92,30 @@
                                             <action selector="logInAction:" destination="onv-41-avN" eventType="touchUpInside" id="zGV-MP-Sty"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W01-3g-Z6O">
+                                        <rect key="frame" x="150" y="440" width="300" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Don't have an account? Sign up">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="signUpAction:" destination="onv-41-avN" eventType="touchUpInside" id="bWW-Tv-Wlf"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="6CP-j1-BuX" firstAttribute="centerX" secondItem="ym3-UA-XLN" secondAttribute="centerX" constant="-1" id="1KB-Hd-PZi"/>
                                     <constraint firstItem="ZqT-nv-lFG" firstAttribute="leading" secondItem="cbT-pz-Wov" secondAttribute="leading" id="Bto-eY-C3X"/>
-                                    <constraint firstItem="6CP-j1-BuX" firstAttribute="top" secondItem="ym3-UA-XLN" secondAttribute="bottom" constant="8" symbolic="YES" id="Cnd-ch-lol"/>
-                                    <constraint firstItem="a4p-6b-fJP" firstAttribute="top" secondItem="PUU-LR-C7c" secondAttribute="top" constant="161" id="Fi0-cL-eXn"/>
+                                    <constraint firstItem="6CP-j1-BuX" firstAttribute="top" secondItem="ym3-UA-XLN" secondAttribute="bottom" constant="2" id="Cnd-ch-lol"/>
+                                    <constraint firstItem="a4p-6b-fJP" firstAttribute="top" secondItem="PUU-LR-C7c" secondAttribute="top" constant="155" id="Fi0-cL-eXn"/>
                                     <constraint firstItem="a4p-6b-fJP" firstAttribute="centerX" secondItem="ym3-UA-XLN" secondAttribute="centerX" constant="-1" id="LDM-dJ-Xqb"/>
                                     <constraint firstItem="ZqT-nv-lFG" firstAttribute="trailing" secondItem="cbT-pz-Wov" secondAttribute="trailing" id="Lky-uu-eMn"/>
                                     <constraint firstItem="ZqT-nv-lFG" firstAttribute="trailing" secondItem="6CP-j1-BuX" secondAttribute="trailing" id="Sqt-vL-vYf"/>
                                     <constraint firstItem="a4p-6b-fJP" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="UXM-l5-Tvf"/>
                                     <constraint firstItem="cbT-pz-Wov" firstAttribute="top" secondItem="ZqT-nv-lFG" secondAttribute="bottom" constant="8" symbolic="YES" id="ZJB-XS-RmG"/>
-                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="top" secondItem="a4p-6b-fJP" secondAttribute="bottom" constant="8" symbolic="YES" id="sv0-XA-ieM"/>
-                                    <constraint firstAttribute="bottom" secondItem="6CP-j1-BuX" secondAttribute="bottom" constant="244" id="uad-C3-OYF"/>
+                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="top" secondItem="a4p-6b-fJP" secondAttribute="bottom" constant="14" id="sv0-XA-ieM"/>
+                                    <constraint firstAttribute="bottom" secondItem="6CP-j1-BuX" secondAttribute="bottom" constant="250" id="uad-C3-OYF"/>
                                     <constraint firstItem="ZqT-nv-lFG" firstAttribute="top" secondItem="6CP-j1-BuX" secondAttribute="bottom" constant="8" symbolic="YES" id="v6x-J9-a1f"/>
                                     <constraint firstItem="ZqT-nv-lFG" firstAttribute="leading" secondItem="6CP-j1-BuX" secondAttribute="leading" id="y8k-kt-03K"/>
                                 </constraints>
@@ -123,7 +133,7 @@
                         <outlet property="emailTextField" destination="6CP-j1-BuX" id="G6Y-Vl-UPI"/>
                         <outlet property="logInButton" destination="cbT-pz-Wov" id="78L-TI-vzT"/>
                         <outlet property="passwordTextField" destination="ZqT-nv-lFG" id="tZh-YD-hQ8"/>
-                        <outlet property="userName" destination="6CP-j1-BuX" id="L9h-jy-0eU"/>
+                        <outlet property="signUpButton" destination="W01-3g-Z6O" id="Xsf-Kc-aMe"/>
                         <segue destination="mst-Bb-4CH" kind="show" identifier="segueToTabs" id="tTb-kD-YmT"/>
                     </connections>
                 </viewController>
@@ -273,7 +283,40 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TeD-4p-F7x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1025" y="303"/>
+            <point key="canvasLocation" x="1009" y="-63"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="WFd-BO-bPg">
+            <objects>
+                <viewController storyboardIdentifier="WebViewController" id="dn4-qz-qXR" customClass="WebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pMM-v0-vbw"/>
+                        <viewControllerLayoutGuide type="bottom" id="t4b-Pj-oAA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="d26-5H-avu">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P1h-xv-yPA">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="P1h-xv-yPA" secondAttribute="trailing" id="RZU-HO-WSb"/>
+                            <constraint firstItem="P1h-xv-yPA" firstAttribute="bottom" secondItem="t4b-Pj-oAA" secondAttribute="top" id="ZLy-hR-qYb"/>
+                            <constraint firstItem="P1h-xv-yPA" firstAttribute="top" secondItem="d26-5H-avu" secondAttribute="top" id="cva-Dx-SSD"/>
+                            <constraint firstItem="P1h-xv-yPA" firstAttribute="leading" secondItem="d26-5H-avu" secondAttribute="leading" id="gry-UP-oU8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="P1h-xv-yPA" id="DHw-8R-AQL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fOI-fm-hr7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1009" y="710"/>
         </scene>
         <!--List-->
         <scene sceneID="gCZ-D0-D3W">
