--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -23,67 +23,64 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ym3-UA-XLN">
-                                        <rect key="frame" x="238" y="297" width="126" height="21"/>
+                                        <rect key="frame" x="8" y="275" width="584" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="fVw-EY-lLK"/>
+                                        </constraints>
                                         <attributedString key="attributedText">
                                             <fragment content="Login to Udacity">
                                                 <attributes>
                                                     <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <font key="NSFont" size="17" name="HelveticaNeue"/>
-                                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
                                         </attributedString>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6CP-j1-BuX" userLabel="email">
-                                        <rect key="frame" x="150" y="320" width="300" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" allowsEditingTextAttributes="YES" placeholder="Email" clearsOnBeginEditing="YES" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="6CP-j1-BuX" userLabel="email">
+                                        <rect key="frame" x="8" y="304" width="584" height="30"/>
                                         <color key="backgroundColor" red="0.99677062034606934" green="0.80863399095742761" blue="0.16895177518519222" alpha="0.49364224137931034" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="YbH-yl-In5"/>
-                                            <constraint firstAttribute="width" constant="300" id="ZfP-WX-Cri"/>
+                                            <constraint firstAttribute="height" constant="30" id="8ai-Kh-lSu"/>
+                                            <constraint firstAttribute="width" constant="584" id="WSm-Ay-eUF"/>
                                         </constraints>
-                                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textcolor">
+                                            <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                                 <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="_placeholder.indent">
-                                                <integer key="value" value="10"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZqT-nv-lFG" userLabel="password">
-                                        <rect key="frame" x="150" y="358" width="300" height="30"/>
+                                        <rect key="frame" x="8" y="342" width="584" height="30"/>
                                         <color key="backgroundColor" red="0.99677062029999997" green="0.808633991" blue="0.16895177519999999" alpha="0.49364224140000001" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="xuT-O4-wvK"/>
+                                            <constraint firstAttribute="height" constant="30" id="w0F-EN-R7x"/>
                                         </constraints>
-                                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                                 <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="keyPath">
-                                                <integer key="value" value="10"/>
-                                            </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="udacity" translatesAutoresizingMaskIntoConstraints="NO" id="a4p-6b-fJP">
-                                        <rect key="frame" x="236" y="155" width="128" height="128"/>
+                                        <rect key="frame" x="236" y="139" width="128" height="128"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="0wI-8h-ieo"/>
-                                            <constraint firstAttribute="width" constant="128" id="VWd-8f-yd2"/>
+                                            <constraint firstAttribute="width" constant="128" id="IfO-Ie-MoK"/>
+                                            <constraint firstAttribute="height" constant="128" id="kfD-am-cGJ"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cbT-pz-Wov">
-                                        <rect key="frame" x="150" y="396" width="300" height="36"/>
-                                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <rect key="frame" x="8" y="380" width="584" height="36"/>
+                                        <color key="backgroundColor" red="0.94509803921568625" green="0.33725490196078434" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="36" id="wxI-Q4-Po4"/>
+                                            <constraint firstAttribute="height" constant="36" id="fQ7-sN-xtY"/>
                                         </constraints>
                                         <state key="normal" title="Log In">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -92,8 +89,8 @@
                                             <action selector="logInAction:" destination="onv-41-avN" eventType="touchUpInside" id="zGV-MP-Sty"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W01-3g-Z6O">
-                                        <rect key="frame" x="150" y="440" width="300" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W01-3g-Z6O">
+                                        <rect key="frame" x="8" y="424" width="584" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Don't have an account? Sign up">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -103,21 +100,27 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.99215686274509807" green="0.5607843137254902" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="6CP-j1-BuX" firstAttribute="centerX" secondItem="ym3-UA-XLN" secondAttribute="centerX" constant="-1" id="1KB-Hd-PZi"/>
-                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="leading" secondItem="cbT-pz-Wov" secondAttribute="leading" id="Bto-eY-C3X"/>
-                                    <constraint firstItem="6CP-j1-BuX" firstAttribute="top" secondItem="ym3-UA-XLN" secondAttribute="bottom" constant="2" id="Cnd-ch-lol"/>
-                                    <constraint firstItem="a4p-6b-fJP" firstAttribute="top" secondItem="PUU-LR-C7c" secondAttribute="top" constant="155" id="Fi0-cL-eXn"/>
-                                    <constraint firstItem="a4p-6b-fJP" firstAttribute="centerX" secondItem="ym3-UA-XLN" secondAttribute="centerX" constant="-1" id="LDM-dJ-Xqb"/>
-                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="trailing" secondItem="cbT-pz-Wov" secondAttribute="trailing" id="Lky-uu-eMn"/>
-                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="trailing" secondItem="6CP-j1-BuX" secondAttribute="trailing" id="Sqt-vL-vYf"/>
-                                    <constraint firstItem="a4p-6b-fJP" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="UXM-l5-Tvf"/>
-                                    <constraint firstItem="cbT-pz-Wov" firstAttribute="top" secondItem="ZqT-nv-lFG" secondAttribute="bottom" constant="8" symbolic="YES" id="ZJB-XS-RmG"/>
-                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="top" secondItem="a4p-6b-fJP" secondAttribute="bottom" constant="14" id="sv0-XA-ieM"/>
-                                    <constraint firstAttribute="bottom" secondItem="6CP-j1-BuX" secondAttribute="bottom" constant="250" id="uad-C3-OYF"/>
-                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="top" secondItem="6CP-j1-BuX" secondAttribute="bottom" constant="8" symbolic="YES" id="v6x-J9-a1f"/>
-                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="leading" secondItem="6CP-j1-BuX" secondAttribute="leading" id="y8k-kt-03K"/>
+                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="trailing" secondItem="6CP-j1-BuX" secondAttribute="trailing" id="43V-ju-kqG"/>
+                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="trailing" secondItem="cbT-pz-Wov" secondAttribute="trailing" id="6vT-Qa-OBM"/>
+                                    <constraint firstItem="a4p-6b-fJP" firstAttribute="centerX" secondItem="6CP-j1-BuX" secondAttribute="centerX" id="AHc-6a-NNc"/>
+                                    <constraint firstItem="cbT-pz-Wov" firstAttribute="top" secondItem="ZqT-nv-lFG" secondAttribute="bottom" constant="8" symbolic="YES" id="EWg-x4-Ozw"/>
+                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="top" secondItem="6CP-j1-BuX" secondAttribute="bottom" constant="8" symbolic="YES" id="F4t-L7-ZCr"/>
+                                    <constraint firstAttribute="trailing" secondItem="ym3-UA-XLN" secondAttribute="trailing" constant="8" id="QRX-T5-2Ya"/>
+                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="top" secondItem="a4p-6b-fJP" secondAttribute="bottom" constant="8" id="VLH-bm-Cxv"/>
+                                    <constraint firstItem="W01-3g-Z6O" firstAttribute="top" secondItem="cbT-pz-Wov" secondAttribute="bottom" constant="8" symbolic="YES" id="WuZ-ok-NnE"/>
+                                    <constraint firstItem="6CP-j1-BuX" firstAttribute="trailing" secondItem="ZqT-nv-lFG" secondAttribute="trailing" id="YJq-iD-yhO"/>
+                                    <constraint firstItem="a4p-6b-fJP" firstAttribute="top" secondItem="PUU-LR-C7c" secondAttribute="top" constant="139" id="Ykb-pk-LmV"/>
+                                    <constraint firstItem="6CP-j1-BuX" firstAttribute="top" secondItem="ym3-UA-XLN" secondAttribute="bottom" constant="8" symbolic="YES" id="e4M-Sg-CSL"/>
+                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="leading" secondItem="W01-3g-Z6O" secondAttribute="leading" id="fMK-NT-VKt"/>
+                                    <constraint firstItem="6CP-j1-BuX" firstAttribute="leading" secondItem="ZqT-nv-lFG" secondAttribute="leading" id="g7a-7G-VCm"/>
+                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="leading" secondItem="PUU-LR-C7c" secondAttribute="leading" constant="8" id="gf6-wx-aKu"/>
+                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="leading" secondItem="6CP-j1-BuX" secondAttribute="leading" id="iDp-g0-8Iv"/>
+                                    <constraint firstItem="ym3-UA-XLN" firstAttribute="top" secondItem="a4p-6b-fJP" secondAttribute="bottom" constant="8" symbolic="YES" id="q0G-n1-wwA"/>
+                                    <constraint firstItem="ZqT-nv-lFG" firstAttribute="leading" secondItem="cbT-pz-Wov" secondAttribute="leading" id="uEs-fw-T29"/>
+                                    <constraint firstItem="cbT-pz-Wov" firstAttribute="centerX" secondItem="W01-3g-Z6O" secondAttribute="centerX" id="xUR-tp-uih"/>
+                                    <constraint firstItem="a4p-6b-fJP" firstAttribute="centerX" secondItem="PUU-LR-C7c" secondAttribute="centerX" id="xcX-g3-GS7"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -207,10 +210,10 @@
             </objects>
             <point key="canvasLocation" x="276" y="710"/>
         </scene>
-        <!--Annotation View Controller-->
+        <!--Information Posting View Controller-->
         <scene sceneID="Bu6-nM-tQp">
             <objects>
-                <viewController storyboardIdentifier="AnnotationViewController" id="vwb-sP-Mtu" customClass="AnnotationViewController" customModule="OnTheMap" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InformationPostingViewController" id="vwb-sP-Mtu" customClass="InformationPostingViewController" customModule="OnTheMap" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="OAl-pa-1bg"/>
                         <viewControllerLayoutGuide type="bottom" id="cUS-J9-oUJ"/>
@@ -387,7 +390,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="cP1-3E-h05">
             <objects>
-                <tabBarController id="mst-Bb-4CH" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" id="mst-Bb-4CH" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="gMS-Rc-qGG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
