Current error message: Terminating app due to uncaught exception 'NSInternalInconsistencyException', reason: '-[UITableViewController loadView] loaded the "rQb-Ks-2eA-view-VM7-ay-5yt" nib but didn't get a UITableView.' In short, the StudentListTableViewController doesn't have (or at least "see") the UITableView.
Solution I will attempt: (1) Delete the segues from the current TabBarController to the a) StudentListTVC and b) MapViewController; (2) Delete and then replace the TabBarController (3) Embed a NavBar in the new TabBarController (4) Add new segues to the still-existing Student ListTableViewController

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -436,7 +436,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="4Ql-20-yXw" kind="relationship" relationship="viewControllers" id="S8N-FE-Iya"/>
-                        <segue destination="rQb-Ks-2eA" kind="show" identifier="" id="v8M-21-m8X"/>
+                        <segue destination="rQb-Ks-2eA" kind="relationship" relationship="viewControllers" id="xkF-PT-MAz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pjd-nL-0DV" userLabel="First Responder" sceneMemberID="firstResponder"/>
